@@ -53,7 +53,8 @@ sub _getBiosHardware {
     $bios->{MSN} = $base_info->{'Serial Number'};
 
     my $hardware = {
-        UUID => $system_info->{'UUID'}
+        UUID => $system_info->{'UUID'},
+        CHASSIS_TYPE  => $chassis_info->{'Type'}
     };
 
     my $vmsystem;
